--- a/public/newTutor/fill-details.html
+++ b/public/newTutor/fill-details.html
@@ -25,9 +25,8 @@
 <header>
     <div class="nameHeading"><span ng-class="newColor1">Help</span><span class="newColor">DU</span></div>
     <ul class="newColor1">
-        <li>About</li>
-        <li>Apply as a Tutor</li>
-        <li>Contact</li>
+        <a href="/contact"><li>Contact</li></a>
+        <a href="/contact"><li>Contact</li></a>
     </ul>
 </header>
 
