--- a/public/newTutor/fill-details.html
+++ b/public/newTutor/fill-details.html
@@ -24,10 +24,6 @@
 
 <header>
     <div class="nameHeading"><span ng-class="newColor1">Help</span><span class="newColor">DU</span></div>
-    <ul class="newColor1">
-        <a href="/contact"><li>Contact</li></a>
-        <a href="/contact"><li>Contact</li></a>
-    </ul>
 </header>
 
 <!--
@@ -142,15 +138,15 @@
 
     </section>
 
-    <footer>
-        <div class="footerBox">
+    <footer class="newColor3">
+        <div class="container">
             <p>©2015 HelpDU. All rights reserved.</p>
             <ul>
                 <li>
-                    <a href="">About</a>
+                    <a href="/about.html">About</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="/contact.html">Contact</a>
                 </li>
                 <li>
                     <a href="">Terms &amp; Conditions</a>
