--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="indexApp" class="indexPage">
 <head lang="en">
+    <base href="/" />
     <meta charset="UTF-8">
     <title>HelpDU</title>
     <script type="text/javascript" src="javascripts/lib/angular.min.js"></script>
