--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>HelpDU</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Homenaje' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/css-reset.css"/>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/new-style.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/footer-links-style.css"/>
 </head>
 <body>
 
 <div  id="mainContentWrapper">
     <header>
-
+        <a href="/"><div class="nameHeading"><span ng-class="newColor1">Help</span><span class="newColor">DU</span></div></a>
     </header>
 
 
@@ -27,8 +28,8 @@
         </div>
 
         <div class="policyContainer">
-            <div class="nameHeading"><h2><strong>HelpDu</strong></h2></div>
-            <h1><strong class="privacyPolicyHeading">Privacy Policy</strong></h1>
+            <div class="nameHeading newFont"><h2><strong>HelpDu</strong></h2></div>
+            <h1><strong class="privacyPolicyHeading newFont">Privacy Policy</strong></h1>
             <div class="content">
             BetterFlow provides its users with the ability to take notes in an easy and convenient manner, via the BetterFlow website and domain name offered from time to time (collectively, the “Website”) and/or the BetterFlow mobile application (the “Application” and together with the Website, the “BetterFlow Service”). The BetterFlow Service is owned and operated by Notekick Inc., a Delaware corporation (“BetterFlow”, “we” or “us”).
 
@@ -54,11 +55,11 @@
 
             <br><br>
 
-            <strong ><a name="terms"> </a>. Terms of Service</strong>. Use of the BetterFlow Service is subject to the terms of our Terms of Service found at http://betterflow.co, which is hereby incorporated and made part of this Privacy Policy. By using the BetterFlow Service, you agree to be bound by our Terms of Service.
+            <strong ><a class="anchor" name="terms"> </a>1. Terms of Service</strong>. Use of the BetterFlow Service is subject to the terms of our Terms of Service found at http://betterflow.co, which is hereby incorporated and made part of this Privacy Policy. By using the BetterFlow Service, you agree to be bound by our Terms of Service.
 
             <br><br>
 
-            <strong><a name="types">2. Types and Uses of Collected Information.</a> </strong>BetterFlow collects two types of information about you:
+            <strong><a class="anchor" name="types"></a>2. Types and Uses of Collected Information.</strong>BetterFlow collects two types of information about you:
 
             <br><br>
 
@@ -78,7 +79,7 @@
 
             <br><br>
 
-            <strong><a name="release">3. Release of Personally Identifiable Information.</a> </strong>We will not sell or share your Personally Identifiable Information with other parties except as provided below:
+            <strong><a class="anchor" name="release"></a>3. Release of Personally Identifiable Information. </strong>We will not sell or share your Personally Identifiable Information with other parties except as provided below:
 
             <br><br>
 
@@ -101,25 +102,25 @@
 
 
     </section>
-    <footer>
-        <div class="container">
-            <p>©2015 HelpDU. All rights reserved.</p>
-            <ul>
-                <li>
-                    <a href="">About</a>
-                </li>
-                <li>
-                    <a href="">Contact</a>
-                </li>
-                <li>
-                    <a href="">Terms &amp; Conditions</a>
-                </li>
-                <li>
-                    <a href="">Privacy Policy</a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+    <  <footer>
+    <div class="container">
+        <p>©2015 HelpDU. All rights reserved.</p>
+        <ul>
+            <li>
+                <a href="/about">About</a>
+            </li>
+            <li>
+                <a href="/contact">Contact</a>
+            </li>
+            <li>
+                <a href="">Terms &amp; Conditions</a>
+            </li>
+            <li>
+                <a href="">Privacy Policy</a>
+            </li>
+        </ul>
+    </div>
+</footer>
 </div>
 
 </body>
