--- a/public/newTutor/fill-details.html
+++ b/public/newTutor/fill-details.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="indexApp">
 <head lang="en">
+    <base href="/" />
     <meta charset="UTF-8">
     <title>HelpDU</title>
     <script type="text/javascript" src="../javascripts/lib/angular.min.js"></script>
