--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
         <div class="homeworkHelp steps"><div class="stepHeading"><span>Personalized</span></div><div class="stepImage"></div><div class="stepDescription"><span>Every session is one-to-one and personalized.</span></div></div>
     </div>
 
-    <div class="imageBreak imageBreak1"><div class="opacityCover"></div></div>
+    <div class="imageBreak imageBreak1"><div class="opacityCover"><h1 class="newFont newColor3">We care for you.</h1></div></div>
 
     <!--<div class="studentReviews">
         <h2>What our students say about their tutors</h2>
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <div class="imageBreak imageBreak2"><div class="opacityCover"></div></div>
+    <div class="imageBreak imageBreak2"><div class="opacityCover"><h1 class="newFont newColor3">We know what you want.</h1></div></div>
 
     <a id="whyHelpdu"></a>
     <div class="howItWorks2 whyHelpdu featureBox">
@@ -223,7 +223,7 @@
         </div>
     </div>
 
-    <div class="imageBreak imageBreak3"><div class="opacityCover"></div></div>
+    <div class="imageBreak imageBreak3"><div class="opacityCover"><h1 class="newFont newColor3">We are with you.</h1></div></div>
     <a id="applyAsTutor"></a>
     <div class="howItWorks2 tutorRegistration featureBox">
         <div class="scroll-arrow-wrapper"><div class="scroll-arrow pointer" ng-click="gotoElement('applyAsTutor')"></div></div>
@@ -249,10 +249,10 @@
                 <a href="/contact.html">Contact</a>
             </li>
             <li>
-                <a href="">Terms &amp; Conditions</a>
+                <a href="/privacy-policy.html/#terms">Terms &amp; Conditions</a>
             </li>
             <li>
-                <a href="">Privacy Policy</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
             </li>
         </ul>
     </div>
