--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -102,21 +102,21 @@
 
 
     </section>
-    <  <footer>
+    <footer class="newColor3">
     <div class="container">
         <p>©2015 HelpDU. All rights reserved.</p>
         <ul>
             <li>
-                <a href="/about">About</a>
+                <a href="/about.html">About</a>
             </li>
             <li>
-                <a href="/contact">Contact</a>
+                <a href="/contact.html">Contact</a>
             </li>
             <li>
-                <a href="">Terms &amp; Conditions</a>
+                <a href="/privacy-policy.html/#terms">Terms &amp; Conditions</a>
             </li>
             <li>
-                <a href="">Privacy Policy</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
             </li>
         </ul>
     </div>
