--- a/public/newTutor/fill-details.html
+++ b/public/newTutor/fill-details.html
@@ -150,10 +150,10 @@
                     <a href="/contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="">Terms &amp; Conditions</a>
+                    <a href="/privacy-policy.html/#terms">Terms &amp; Conditions</a>
                 </li>
                 <li>
-                    <a href="">Privacy Policy</a>
+                    <a href="/privacy-policy.html">Privacy Policy</a>
                 </li>
             </ul>
         </div>
